syntax = "proto3";

package gen;

option go_package = "github.com/lucasHSantiago/gobank/proto/gen";

message VerifyEmailRequest {
  int64 email_id = 1;
  string secret_code = 2;
}

message VerifyEmailResponse {
  bool is_verified = 1;
}
